Создано с помощью Colaboratory

--- a/Main_test_model_KDD.ipynb
+++ b/Main_test_model_KDD.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOG3uc+kg8UKc6nquBFXffS",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPt4A0R3V2YQrhf1e1xFvbh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +99,114 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Этап 2: Стандартизация датасета"
+      ],
+      "metadata": {
+        "id": "Xpv0Pc5wqcAU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y6zAiTHuqiVk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Этап 3: Архитектура модели"
+      ],
+      "metadata": {
+        "id": "4cEcJMCHqjFU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "siixR7LGqoeK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Этап 4: Преобразование данных датасета"
+      ],
+      "metadata": {
+        "id": "6qYXD6O3qpBs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zZSBk4DDqwe8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Этап 5: Компиляция с оптимизатором и критерием категории выполнения работы"
+      ],
+      "metadata": {
+        "id": "XDIZuXhZqphp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TEeLnClrq25h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Этап 6: Модель обучения"
+      ],
+      "metadata": {
+        "id": "1s9qpe02qp9B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2i9j0YETq7or"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Этап 7: Тестирование и компилирование НС"
+      ],
+      "metadata": {
+        "id": "jwLbiPPwrILi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RTbpq0XtrPnS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
